kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: demoapp
